crates/goat_semantic/tests/integration/snapshots/argument_map.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/argument_map.js
---
bb0: {

}

bb1: {

}

bb2: {

}

bb3: {
	statement
	return
}

bb4: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
ExpressionStatement
return" shape = box]
    4 [ label = "bb4" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 3 [ label="NewFunction"]
    4 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 4 [ label="Normal"]
}
