crates/goat_semantic/tests/integration/snapshots/assignment_operators.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/assignment_operators.js
---
bb0: {

}

bb1: {
	statement
}

bb2: {
	condition
}

bb3: {

}

bb4: {
	statement
}

bb5: {
	condition
}

bb6: {

}

bb7: {
	statement
}

bb8: {
	condition
}

bb9: {

}

bb10: {
	statement
	statement
}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
ExpressionStatement" shape = box]
    2 [ label = "bb2
Condition(IdentifierReference(x))" shape = box]
    3 [ label = "bb3" shape = box]
    4 [ label = "bb4
ExpressionStatement" shape = box]
    5 [ label = "bb5
Condition(IdentifierReference(x))" shape = box]
    6 [ label = "bb6" shape = box]
    7 [ label = "bb7
ExpressionStatement" shape = box]
    8 [ label = "bb8
Condition(IdentifierReference(x))" shape = box]
    9 [ label = "bb9" shape = box]
    10 [ label = "bb10
ExpressionStatement
ExpressionStatement" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    2 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 2 [ label="Normal"]
    2 -> 3 [ label="Normal"]
    2 -> 4 [ label="Normal"]
    3 -> 4 [ label="Normal"]
    5 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    6 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    7 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 5 [ label="Normal"]
    5 -> 6 [ label="Normal"]
    5 -> 7 [ label="Normal"]
    6 -> 7 [ label="Normal"]
    8 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    9 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    10 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    7 -> 8 [ label="Normal"]
    8 -> 9 [ label="Normal"]
    8 -> 10 [ label="Normal"]
    9 -> 10 [ label="Normal"]
}
