crates/goat_semantic/tests/integration/snapshots/break_from_a_label_in_global_scope.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/break_from_a_label_in_global_scope.js
---
bb0: {

}

bb1: {
	statement
	break <label>
}

bb2: {
	unreachable
}

bb3: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
LabeledStatement(A)
break <A>" shape = box]
    2 [ label = "bb2
unreachable" shape = box]
    3 [ label = "bb3" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    2 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 2 [ label="Unreachable", style="dotted"]
    3 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    2 -> 3 [ label="Normal", style="dotted"]
    1 -> 3 [ label="Jump", color=green]
}
