crates/goat_semantic/tests/integration/snapshots/do_while_break.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/do_while_break.js
---
bb0: {

}

bb1: {
	statement
}

bb2: {

}

bb3: {
	statement
}

bb4: {

}

bb5: {
	statement
}

bb6: {
	statement
	statement
}

bb7: {
	statement
	break
}

bb8: {
	unreachable
}

bb9: {
	condition
}

bb10: {

}

bb11: {
	return
}

bb12: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
VariableDeclaration" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
TryStatement" shape = box]
    4 [ label = "bb4" shape = box]
    5 [ label = "bb5
BlockStatement" shape = box]
    6 [ label = "bb6
BlockStatement
DoWhileStatement" shape = box]
    7 [ label = "bb7
BlockStatement
break" shape = box]
    8 [ label = "bb8
unreachable" shape = box]
    9 [ label = "bb9
Condition(true)" shape = box]
    10 [ label = "bb10" shape = box]
    11 [ label = "bb11
return" shape = box]
    12 [ label = "bb12" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 3 [ label="NewFunction"]
    5 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    5 -> 4 [ label="Finalize"]
    6 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 6 [ label="Normal"]
    7 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    8 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    7 -> 8 [ label="Unreachable", style="dotted"]
    9 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    10 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    6 -> 7 [ label="Normal"]
    8 -> 9 [ label="Normal", style="dotted"]
    9 -> 10 [ label="Normal", style="dotted"]
    9 -> 7 [ label="Backedge", style="dotted", color=grey]
    7 -> 10 [ label="Jump", color=green]
    3 -> 5 [ label="Normal"]
    11 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    10 -> 11 [ label="Join"]
    12 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 12 [ label="Normal"]
}
