crates/goat_semantic/tests/integration/snapshots/expression_spread.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/expression_spread.js
---
bb0: {

}

bb1: {
	statement
}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
VariableDeclaration" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
}
