crates/goat_semantic/tests/integration/snapshots/for_in.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/for_in.js
---
bb0: {

}

bb1: {

}

bb2: {

}

bb3: {
	statement
	statement
}

bb4: {
	condition
}

bb5: {

}

bb6: {
	statement
}

bb7: {
	statement
	return
}

bb8: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
ForStatement
VariableDeclaration" shape = box]
    4 [ label = "bb4
Condition(test)" shape = box]
    5 [ label = "bb5" shape = box]
    6 [ label = "bb6
ExpressionStatement" shape = box]
    7 [ label = "bb7
ExpressionStatement
return" shape = box]
    8 [ label = "bb8" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 3 [ label="NewFunction"]
    4 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    5 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    6 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    7 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 4 [ label="Normal"]
    4 -> 6 [ label="Jump", color=green]
    6 -> 5 [ label="Backedge", color=grey]
    5 -> 4 [ label="Backedge", color=grey]
    4 -> 7 [ label="Normal"]
    8 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 8 [ label="Normal"]
}
